knxd (0.14.4-1) unstable; urgency=medium

  * Auto-add a pace filter in front of the multicast sender.

 -- Matthias Urlichs <matthias@urlichs.de>  Thu, 23 Mar 2017 04:13:18 +0100

knxd (0.14.3-1) unstable; urgency=medium

  * Various bug fixes.
  * All drivers now implement flow control.
  * "pace" filter:
    * default to 20msec
    * Add a delay-per-byte parameter (1 msec)
  * log send_next stuff with layer 6
  * document flags (specifically, correspondence of flags to config file)

 -- Matthias Urlichs <matthias@urlichs.de>  Thu, 23 Mar 2017 02:48:36 +0100

knxd (0.14.2-1) unstable; urgency=medium

  * send ft12* (serial) setup string
  * fix systemd socket support
  * allow using filters on servers

 -- Matthias Urlichs <matthias@urlichs.de>  Sun, 19 Mar 2017 23:59:23 +0100

knxd (0.14.1-4) unstable; urgency=medium

  * Actually install knxd_args correctly.

 -- Matthias Urlichs <matthias@urlichs.de>  Sat, 18 Mar 2017 20:44:38 +0100

knxd (0.14.1-3) unstable; urgency=medium

  * Actually install knxd_args.

 -- Matthias Urlichs <matthias@urlichs.de>  Fri, 17 Mar 2017 21:02:34 +0100

knxd (0.14.1-2) unstable; urgency=medium

  * don't install eibnet* tools
    not built at the moment

 -- Matthias Urlichs <matthias@urlichs.de>  Tue, 14 Mar 2017 23:22:00 +0100

knxd (0.14.1-1) unstable; urgency=medium

  * v0.14: "Yay, we have a config file" version
  * Generate and use a config file
  * Refactor linking drivers to the main dispatcher
  * use libfmt
    * requires git and cmake, if no libfmt3-dev is found
  * Complain if -E / client-addrs= is required but missing
  * Configuration options to not start, or start and ignore failures of, specific interfaces
  * Filters can now be applied globally
    (filters for which this does not make sense will reject this)
  * Filter logging: append the link's name for disambiguation
  * Auto-restart failing interfaces
  * "queue" filter to decouple a driver
  * "pace" filter to slow down transmission